# MovieDatabase

./: .gitignore  README.md  movieData.txt
data/: MovieDB.txt  readme  testMovies.txt  testReviews.txt
header/: CastList.hpp  CastMember.hpp  DisplayRecommendations.hpp  Movie.hpp  MovieList.hpp  Movie_List.hpp  Movie_list.hpp  Review.h  Review.hpp  ReviewList.hpp  Review_list.hpp  User.hpp  review.h
src/: CMakeLists.txt  CastList.cpp  CastMember.cpp  DisplayRecommendations.cpp  Makefile  Movie.cpp  MovieList.cpp  MovieMain.cpp  Movie_List.cpp  Movie_list.cpp  Review.cpp  ReviewList.cpp  Review_list.cpp  User.cpp  UserMain.cpp  main.cpp  review.cpp
tests/: CMakeLists.txt  CastTest.cpp  MovieTest.cpp  ReviewTest.cpp  UserTest.cpp  test.cpp
